# forwrdcut

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  config.toml  pyproject.toml
.claude/skills/produce-ad/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
brands/: example.toml
docs/: EDITING_PLAYBOOK.md  ENGINE.md  PLATFORMS.md  ROADMAP.md
docs/briefs/: youtube-dual-bag-ad-brief.md
docs/research/: capcut-landscape.md  capcut-techniques.md
examples/: README.md  meta_voiceover_ads.py  quickstart_ad.py  youtube_dual_bag_ad.py
src/forwrdcut/: cli.py  config.py  project.py  scaffold.py
src/forwrdcut/analysis/: audio.py  beats.py  emphasis.py  jumpcut.py  library.py  qc.py  reframe_track.py  scan.py  scenes.py  scoring.py  transcribe.py
src/forwrdcut/audio/: music.py  tts.py
src/forwrdcut/mcp/: server.py
src/forwrdcut/media/: ffmpeg.py  ffprobe.py
src/forwrdcut/render/: annotate.py  caption_video.py  captions.py  grade.py  graphics.py  looks.py  music_gen.py  pipeline.py  reframe.py  sfx.py  timeline.py
src/forwrdcut/strategy/: autoedit.py  batch.py  brand.py  briefs.py  edp.py  llm.py  planner.py  (+2 more)
tests/: test_autoedit.py  test_beats.py  test_brand.py  test_briefs.py  test_emphasis.py  test_graphics_brand.py  test_graphics_positions.py  test_images.py  test_library.py  test_looks.py  test_mixed_still_video_concat.py  test_motion.py  test_music.py  test_qc.py  test_templates.py  test_vo_video_invariant.py
