[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forwrdcut"
version = "0.2.0"
description = "Agent-driven, local-first AI video editor for world-class ads and social content"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FORWRD", email = "hello@forwrd.co" }]
keywords = ["video", "editing", "ffmpeg", "ai-agent", "ads", "short-form", "tts", "captions", "mcp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Environment :: Console",
]
dependencies = [
    "pillow>=10",
    "faster-whisper>=1.1",
    "opencv-python>=4.10",
    "scenedetect>=0.6",
    "av>=12",
    "numpy>=2",
    "anthropic>=0.40",
    "mcp>=1.2",
]

[project.optional-dependencies]
voice = ["kokoro-onnx>=0.3", "soundfile>=0.12"]   # local neural voiceover
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://forwrd.co"
Source = "https://github.com/forwrd/forwrdcut"
Issues = "https://github.com/forwrd/forwrdcut/issues"

[project.scripts]
forwrdcut = "forwrdcut.cli:main"
forwrdcut-mcp = "forwrdcut.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
